# graph

./: .gitignore  README.md  graph.code-workspace
contract_intelligence/: .dockerignore  .env.azure.example  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DESIGN.md  Dockerfile  HYBRID_SEARCH_GUIDE.md  ORGANIZATION.md  QUICKSTART.md  README.md  README_OVERVIEW.md  README_TECHNICAL.md  azure.yaml  check_output.py  debug_lancedb.py  pyproject.toml  run_backend.py  run_graphrag_indexing.py  run_indexing.py  start.bat  start_backend.bat  start_hybrid.bat  test_graphrag_query.py
contract_intelligence/backend/: build_graph.py  ingestion.py  requirements.txt  schema.sql
contract_intelligence/backend/agents/: contract_agent.py  graphrag_agent.py  postgres_graph_agent.py  router_agent.py
contract_intelligence/backend/app/: main.py
contract_intelligence/data_ingestion/: README.md  build_graph.py  check_relationships.py  contract_extractor.py  explore_data.py  graphrag_ingestion.py  ingestion_pipeline.py  postgres_ingestion.py  schema.sql
contract_intelligence/frontend/: index.html  package-lock.json  package.json
contract_intelligence/graphrag_config/: settings.yaml
contract_intelligence/infra/: main.azd.bicep  main.azd.json  main.bicep  networking.bicep  postgres-flex.bicep  postgres-flex.parameters.json
contract_intelligence/scripts/: deploy-containerapp.ps1  generate_seed_data.py  migrate_graphrag_to_postgres.py  run_ingestion.py  test_query.py  test_setup.py
contract_intelligence/test_graphrag/: .env
(+8432 files in other folders)
